--- a/src/app/task-card/task-card.component.scss
+++ b/src/app/task-card/task-card.component.scss
@@ -1,4 +1,9 @@
 mat-card {
   padding: 10px;
   margin-top: 10px;
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
