--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>To Do</span>
+  <span>Planner</span>
   <span class="spacer"></span>
   <button mat-icon-button>
     <mat-icon>
