--- a/src/app/components/task-card/task-card.component.html
+++ b/src/app/components/task-card/task-card.component.html
@@ -1,5 +1,9 @@
   <mat-card>
-    <span>{{taskName}}</span>
+    <span>{{task.id}}</span>
+    <span>{{task.title}}</span>
+    <span>{{task.description}}</span>
+    <span>{{task.status}}</span>
+    <span>{{task.dateDue}}</span>
     <button mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>more_horiz</mat-icon>
     </button>
