--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -2,33 +2,39 @@
   <div 
     class="list-container" 
     cdkDropList 
-    [cdkDropListData]="(todo$ | async) ?? todo"
+    [cdkDropListData]="(task$ | async) ?? task"
     (cdkDropListDropped)="drop($event)">
     <h3>To Do</h3>
-    <div *ngFor="let item of todo$ | async" cdkDrag>
-      <app-task-card [taskName]="item.toString()"></app-task-card>
+    <div *ngFor="let item of task$ | async" cdkDrag [cdkDragData]="item">
+      <ng-container *ngIf="item.status === 'new'">
+        <app-task-card [task]="item"></app-task-card>
+      </ng-container>
     </div>
   </div>
 
   <div 
     class="list-container" 
     cdkDropList 
-    [cdkDropListData]="doing"
+    [cdkDropListData]="(task$ | async) ?? task"
     (cdkDropListDropped)="drop($event)">
     <h3>Doing</h3>
-    <div *ngFor="let item of doing" cdkDrag>
-      <app-task-card [taskName]="item.toString()"></app-task-card>
+    <div *ngFor="let item of task$ | async" cdkDrag [cdkDragData]="item">
+      <ng-container *ngIf="item.status === 'doing'">
+        <app-task-card [task]="item"></app-task-card>
+      </ng-container>
     </div>
   </div>
 
   <div 
     class="list-container" 
     cdkDropList 
-    [cdkDropListData]="done"
+    [cdkDropListData]="(task$ | async) ?? task"
     (cdkDropListDropped)="drop($event)">
     <h3>Done</h3>
-    <div *ngFor="let item of done" cdkDrag>
-      <app-task-card [taskName]="item.toString()"></app-task-card>
+    <div *ngFor="let item of task$ | async" cdkDrag [cdkDragData]="item">
+      <ng-container *ngIf="item.status === 'done'">
+        <app-task-card [task]="item"></app-task-card>
+      </ng-container>
     </div>
   </div>
 </div>
