--- a/src/app/components/task-card/task-card.component.scss
+++ b/src/app/components/task-card/task-card.component.scss
@@ -2,8 +2,27 @@ mat-card {
   padding: 10px;
   margin-top: 10px;
   display: flex;
-  flex: 1 1 auto;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+
+  .cardData{
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-right: 20px;
+  }
+
+  .taskId {
+    color: gray;
+    font-size: 13px;
+    padding-bottom: 5px;
+  }
+
+  .mainData {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 13px;
+  }
 }
