when sidenav aciton is clicked hide the sidenav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
         <div class="sidenavMenu">
           <div class="theme-toggle">
             <mat-icon>light_mode</mat-icon>
-            <mat-slide-toggle [(ngModel)]="darkTheme"></mat-slide-toggle>
+            <mat-slide-toggle [(ngModel)]="darkTheme" (change)="sidenavAction()"></mat-slide-toggle>
             <mat-icon>dark_mode</mat-icon>
           </div>
         </div>
