--- a/src/app/components/task-list/task-list.component.scss
+++ b/src/app/components/task-list/task-list.component.scss
@@ -5,11 +5,14 @@
 }
 
 .list-container {
+  // overflow-y: auto;
+  // max-height: 500px;
   margin: 10px;
   display: flex;
   flex: 1 1 33%;
   flex-direction: column;
 }
+
 
 .cdk-drop-list-dragging .cdk-drag {
   transition: transform 500ms cubic-bezier(0, 0, 0.2, 1);
