--- a/src/app/components/task-info-dialog/task-info-dialog.component.scss
+++ b/src/app/components/task-info-dialog/task-info-dialog.component.scss
@@ -2,3 +2,13 @@
   display: flex;
   flex-direction: column;
 }
+
+.dialogButtons {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.dialogContainer {
+  display: flex;
+  flex-direction: column;
+}
